@@ -1,3 +1,7 @@
+* Mon Apr 01 2019 Jim Anderson <thesemicolons@protonmail.com> - 6.1.2-0
+- Moved code for setting chroot directory from manifests/params.pp into data in
+  modules
+
 * Fri Mar 29 2019  Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.1.2-0
 - Replaced all simpcat resources with puppetlabs concat resources.
 - Added support for Puppet 6
